# solana-counter-verification

./: Anchor.toml
programs/solanacounterverification/: Cargo.toml
programs/solanacounterverification/src/: lib.rs
scripts/: interact.ts
tests/: solanacounterverification.ts
